# hubris

./: .gitignore  .licenserc.yaml.disabled  Cargo.toml  mctp-cleanup.sh  mctp-setup.sh  run-qemu-serial.sh
.github/: copilot-instructions.md
.github/workflows/: build-boards.yml  build-one.yml  dist.yml  license-check.yml
app/: run-gdb.sh  run-qemu.sh
app/ast1060-digest-test/: Cargo.toml  GDB-TEST-README.md  app.toml  gdb-test-monitor.py  gdb-test.gdb
app/ast1060-digest-test/src/: main.rs
app/ast1060-ecdsa-test/: Cargo.toml  README.md  app-placeholder.toml  app.toml
app/ast1060-ecdsa-test/src/: main.rs
app/ast1060-i2c-scaffold/: Cargo.toml  app.toml
app/ast1060-i2c-scaffold/src/: main.rs
app/ast1060-mctp-echo/: README.md  app.toml  test-mctp.sh
app/ast1060-mctp-i2c-echo/: Cargo.toml  README.md  app.toml
app/ast1060-spdm-responder/: .gdbinit  TESTING.md  app-rust-crypto.toml  app-rust-cryypto.toml  app-sha2.toml  app.toml  hash-integ.md  spdm-test-setup.sh  spdm_debug.py  test-spdm.sh
app/ast1060-starter/: app.toml
app/ast1060-starter/src/: main.rs
chips/ast1060/: chip.toml  memory.toml
doc/: i2c-api.adoc
drv/ast1060-ecdsa/: Cargo.toml
drv/ast1060-ecdsa/src/: lib.rs  verifier.rs
drv/ast1060-trng/: Cargo.toml  build.rs
drv/ast1060-trng/src/: main.rs
drv/ast1060-uart/: Cargo.toml
drv/ast1060-uart-api/: Cargo.toml
drv/ast1060-uart-api/src/: lib.rs
drv/ast1060-uart/src/: main.rs
drv/crypto-server/: Cargo.toml  build.rs
drv/crypto-server/src/: main.rs
drv/digest-server/: Cargo.toml  README.md  build.rs
drv/digest-server/src/: main.rs  rustcrypto_helpers.rs
drv/i2c-api/src/: lib.rs
drv/i2c-types/src/: lib.rs  traits.rs
drv/openprot-crypto-api/: Cargo.toml  build.rs
drv/openprot-crypto-api/src/: lib.rs
drv/openprot-digest-api/: Cargo.toml  build.rs
drv/openprot-digest-api/src/: lib.rs
drv/openprot-ecdsa-api/: Cargo.toml  build.rs
drv/openprot-ecdsa-api/src/: lib.rs
drv/openprot-ecdsa-server/: Cargo.toml  build.rs
drv/openprot-ecdsa-server/src/: main.rs  p384_key.rs  placeholder.rs
drv/openprot-i2c-server/: Cargo.toml  build.rs
drv/openprot-i2c-server/src/: i2c_topology.rs  main.rs  mock_driver.rs
idl/: crypto.idol  mctp.idol  openprot-crypto.idol  openprot-digest.idol  openprot-ecdsa.idol
lib/ast1060-trng/: Cargo.toml
lib/ast1060-trng/src/: lib.rs
lib/ast1060-uart/: Cargo.toml
lib/ast1060-uart-log/: Cargo.toml
lib/ast1060-uart-log/src/: lib.rs
lib/ast1060-uart/src/: lib.rs
task/digest/: Cargo.toml  build.rs
task/digest/src/: main.rs
task/ecdsa-test/: Cargo.toml
task/ecdsa-test/src/: main.rs
task/hash-client/: Cargo.toml
task/hash-client/src/: main.rs
task/helloworld/: Cargo.toml  build.rs
task/helloworld/src/: main.rs
task/hmac-client/: Cargo.toml  README.md  build.rs
task/hmac-client/src/: main.rs
task/i2c-client/: Cargo.toml  build.rs
task/i2c-client/src/: main.rs
task/mctp-api/: build.rs
task/mctp-api/src/: lib.rs
task/mctp-server/: Cargo.toml  build.rs
task/mctp-server/src/: i2c.rs  main.rs  serial.rs  server.rs
task/spdm-resp/: Cargo.toml
task/spdm-resp/src/: main.rs
task/spdm-resp/src/platform/: cert_store.rs  cert_store_rust_crypto.rs  cert_store_rust_stub.rs  certs.rs  digest-example.md  evidence.rs  hash.rs  hash_mbedtls.rs  hash_sha2.rs  mod.rs  rng.rs
test/test-mctp-request/: Cargo.toml  README.md
test/test-mctp-request/src/: main.rs
test/test-spdm-request/: Cargo.toml  README.md
test/test-spdm-request/src/: main.rs
