[package]
name = "drv-ast1060-trng"
version = "0.1.0"
edition = "2021"

[dependencies]
idol-runtime = { workspace = true }
num-traits = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

drv-rng-api = { path = "../rng-api" }
lib-ast1060-trng = { path = "../../lib/ast1060-trng" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
ringbuf = { path = "../../lib/ringbuf" }
counters = { version = "0.1.0", path = "../../lib/counters" }

[build-dependencies]
idol = { workspace = true }

[features]
no-ipc-counters = ["idol/no-counters"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-ast1060-trng"
test = false
doctest = false
bench = false

[lints]
workspace = true