# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "digest-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock"]
mock = ["openprot-platform-mock"]
aspeed-hace = ["aspeed-ddk", "ast1060-pac", "embedded-hal-1", "proposed-traits"]
rustcrypto = ["openprot-platform-rustcrypto"]

[dependencies]
userlib = { path = "../../sys/userlib" }
idol-runtime = { workspace = true }
drv-digest-api = { path = "../openprot-digest-api" }

# Core dependencies
zerocopy = { workspace = true }
heapless = { workspace = true }
cortex-m = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

# Logging and debugging
ringbuf = { path = "../../lib/ringbuf" }
counters = { path = "../../lib/counters" }
openprot-hal-blocking = { workspace = true }
openprot-platform-mock = { workspace = true, optional = true }
openprot-platform-traits-hubris = { workspace = true }

# Hardware-specific dependencies
aspeed-ddk = { workspace = true, optional = true }
ast1060-pac = { workspace = true, optional = true }
embedded-hal-1 = { workspace = true, optional = true }
proposed-traits = { workspace = true, optional = true }

# RustCrypto platform implementation
openprot-platform-rustcrypto = { workspace = true, optional = true }

[lints]
workspace = true

[build-dependencies]
build-util = { path = "../../build/util" }
idol = { workspace = true }
