[package]
name = "drv-openprot-ecdsa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hubpack = { workspace = true }
idol-runtime = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

counters = { path = "../../lib/counters" }
derive-idol-err = { path = "../../lib/derive-idol-err" }
userlib = { path = "../../sys/userlib" }

[build-dependencies]
idol.workspace = true

[lib]
test = false
doctest = false
bench = false

[lints]
workspace = true