# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drv-mock-i2c"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drv-mock-i2c"
path = "src/main.rs"


[dependencies]
bitfield = { workspace = true }
cortex-m = { workspace = true }
embedded-hal = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
heapless = { workspace = true }

drv-i2c-api = { path = "../i2c-api" }
drv-i2c-types = { path = "../i2c-types" }
ringbuf = { path = "../../lib/ringbuf" }
counters = { path = "../../lib/counters" }
userlib = { path = "../../sys/userlib" }
fixedmap = { path = "../../lib/fixedmap" }

[features]
default = ["mock-only"]
mock-only = []
hardware = []  # Enable this for real hardware builds

[build-dependencies]
build-util = { path = "../../build/util" }

[lints]
workspace = true