[package]
name = "task-ecdsa-test"
version = "0.1.0"
edition = "2021"

[dependencies]
drv-openprot-ecdsa-api = { path = "../../drv/openprot-ecdsa-api" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }

[features]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since some of our features are mutually exclusive.
[[bin]]
name = "task-ecdsa-test"
test = false
doctest = false
bench = false

[lints]
workspace = true