[package]
name = "task-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
zerocopy = { workspace = true }
ast1060-uart-api = { path = "../../drv/ast1060-uart-api" }
embedded-io.workspace = true
nb.workspace = true

[build-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }

build-util = { path = "../../build/util" }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-helloworld"
test = false
doctest = false
bench = false

[lints]
workspace = true
