[package]
name = "task-hmac-client"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
drv-digest-api = { path = "../../drv/openprot-digest-api" }
idol-runtime = { workspace = true }
zerocopy = { workspace = true }
counters = { path = "../../lib/counters" }
ringbuf = { path = "../../lib/ringbuf" }
hmac = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
build-util = { path = "../../build/util" }

[features]
# Removed no-ipc-counters feature as it's not available in this version

[[bin]]
name = "task-hmac-client"
test = false
doctest = false
bench = false

[lints]
workspace = true