# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "task-hmac-client"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
drv-digest-api = { path = "../../drv/openprot-digest-api" }
idol-runtime = { workspace = true }
zerocopy = { workspace = true }
counters = { path = "../../lib/counters" }
ringbuf = { path = "../../lib/ringbuf" }
hmac = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
build-util = { path = "../../build/util" }

[features]
# Removed no-ipc-counters feature as it's not available in this version

[[bin]]
name = "task-hmac-client"
test = false
doctest = false
bench = false

[lints]
workspace = true