# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "task-i2c-client"
version = "0.1.0"
edition = "2021"

[dependencies]
drv-i2c-api = { path = "../../drv/i2c-api", features = ["component-id"] }
drv-i2c-types = { path = "../../drv/i2c-types" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
zerocopy = { version = "0.7", default-features = false, features = ["derive"] }
ringbuf = { path = "../../lib/ringbuf" }

[build-dependencies]
build-util = { path = "../../build/util" }

[features]
hardware = []