[package]
name = "mctp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
idol-runtime = { workspace = true }
counters = { path = "../../lib/counters" }
num-traits = { workspace = true }
serde = { workspace = true }
hubpack = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
mctp-api = { path = "../mctp-api" }
mctp-stack = { git = "https://github.com/9elements/mctp-lib.git", branch = "buildup", package = "mctp-lib" }
mctp = { workspace = true }
ast1060-uart-api = { path = "../../drv/ast1060-uart-api", optional = true }
nb = {workspace = true}
heapless = { workspace = true }
embedded-io = { workspace = true }
drv-i2c-api = { path = "../../drv/i2c-api", optional = true }
ast1060-uart-log = { path = "../../lib/ast1060-uart-log", optional = true }
log.workspace = true

[build-dependencies]
idol = { workspace = true }
build-util = { path = "../../build/util" }

[features]
transport_serial = ["dep:ast1060-uart-api"]
transport_i2c = ["dep:drv-i2c-api"]
serial_log = ["dep:ast1060-uart-api", "dep:ast1060-uart-log"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "mctp-server"
test = false
doctest = false
bench = false

[lints]
workspace = true
